packages/dcflight/ios/Classes/DCFlightFfi.h

// Event callback function pointer type
// Signature: void callback(int32_t viewId, const char* eventType, const char* eventDataJson)
typedef void (*DCFlightEventCallback)(int32_t viewId, const char* eventType, const char* eventDataJson);
// Initialize the DCFlight bridge
bool dcflight_initialize(void);
// View operations
bool dcflight_create_view(int32_t viewId, const char* viewType, const char* propsJson);
bool dcflight_update_view(int32_t viewId, const char* propsJson);
bool dcflight_delete_view(int32_t viewId);
bool dcflight_detach_view(int32_t childId);
bool dcflight_attach_view(int32_t childId, int32_t parentId, int32_t index);
bool dcflight_set_children(int32_t viewId, const int32_t* childrenIds, int32_t childrenCount);
// Event listeners
bool dcflight_add_event_listeners(int32_t viewId, const char* eventTypes);
bool dcflight_remove_event_listeners(int32_t viewId, const char* eventTypes);
// Batch updates
bool dcflight_start_batch_update(void);
bool dcflight_commit_batch_update(const char* operationsJson);
bool dcflight_cancel_batch_update(void);
// Tunnel mechanism
bool dcflight_tunnel(const char* componentType, const char* method, const char* paramsJson, char* resultJson, int32_t resultSize);
// Event callback management
void dcflight_set_event_callback(DCFlightEventCallback callback);
DCFlightEventCallback dcflight_get_event_callback(void);
void dcflight_send_event(int32_t viewId, const char* eventType, const char* eventDataJson);
// Screen dimensions
bool dcflight_get_screen_dimensions(char* resultJson, int32_t resultSize);