packages/dcflight/lib/framework/renderer/interface/src/generated/dcflight_ffi_bindings.dart

// Auto-generated by ffigen
// FFI bindings for iOS DCFlight native bridge

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for iOS DCFlight native bridge
class DCFlightFfi {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DCFlightFfi(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DCFlightFfi.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Initialize the DCFlight bridge
  /// Returns true if initialization succeeded, false otherwise
  bool dcflight_initialize() {
    return _dcflight_initialize();
  }

  late final _dcflight_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('dcflight_initialize');
  late final _dcflight_initialize =
      _dcflight_initializePtr.asFunction<bool Function()>();

  /// Create a view with the specified ID, type, and properties
  /// viewId: Unique identifier for the view
  /// viewType: Component type (e.g., "View", "Text", "Button")
  /// propsJson: JSON string containing view properties
  /// Returns true if the view was created successfully, false otherwise
  bool dcflight_create_view(
    int viewId,
    ffi.Pointer<ffi.Char> viewType,
    ffi.Pointer<ffi.Char> propsJson,
  ) {
    return _dcflight_create_view(
      viewId,
      viewType,
      propsJson,
    );
  }

  late final _dcflight_create_viewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Int32, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('dcflight_create_view');
  late final _dcflight_create_view = _dcflight_create_viewPtr.asFunction<
      bool Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Update properties of an existing view
  /// viewId: Unique identifier for the view to update
  /// propsJson: JSON string containing property changes
  /// Returns true if the view was updated successfully, false otherwise
  bool dcflight_update_view(
    int viewId,
    ffi.Pointer<ffi.Char> propsJson,
  ) {
    return _dcflight_update_view(
      viewId,
      propsJson,
    );
  }

  late final _dcflight_update_viewPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Pointer<ffi.Char>)>>(
      'dcflight_update_view');
  late final _dcflight_update_view = _dcflight_update_viewPtr
      .asFunction<bool Function(int, ffi.Pointer<ffi.Char>)>();

  /// Delete a view
  /// viewId: Unique identifier for the view to delete
  /// Returns true if the view was deleted successfully, false otherwise
  bool dcflight_delete_view(
    int viewId,
  ) {
    return _dcflight_delete_view(
      viewId,
    );
  }

  late final _dcflight_delete_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
          'dcflight_delete_view');
  late final _dcflight_delete_view =
      _dcflight_delete_viewPtr.asFunction<bool Function(int)>();

  /// Detach a view from its parent without deleting it
  /// viewId: Unique identifier for the view to detach
  /// Returns true if the view was detached successfully, false otherwise
  bool dcflight_detach_view(
    int viewId,
  ) {
    return _dcflight_detach_view(
      viewId,
    );
  }

  late final _dcflight_detach_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
          'dcflight_detach_view');
  late final _dcflight_detach_view =
      _dcflight_detach_viewPtr.asFunction<bool Function(int)>();

  /// Attach a child view to a parent view at the specified index
  /// childId: Unique identifier for the child view
  /// parentId: Unique identifier for the parent view
  /// index: Position in the parent's child list
  /// Returns true if the view was attached successfully, false otherwise
  bool dcflight_attach_view(
    int childId,
    int parentId,
    int index,
  ) {
    return _dcflight_attach_view(
      childId,
      parentId,
      index,
    );
  }

  late final _dcflight_attach_viewPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32)>>(
      'dcflight_attach_view');
  late final _dcflight_attach_view =
      _dcflight_attach_viewPtr.asFunction<bool Function(int, int, int)>();

  /// Set all children for a view (replacing any existing children)
  /// viewId: Unique identifier for the parent view
  /// childrenIds: Comma-separated string of child view identifiers (e.g., "1,2,3")
  /// childrenCount: Number of children
  /// Returns true if children were set successfully, false otherwise
  bool dcflight_set_children(
    int viewId,
    ffi.Pointer<ffi.Int32> childrenIds,
    int childrenCount,
  ) {
    return _dcflight_set_children(
      viewId,
      childrenIds,
      childrenCount,
    );
  }

  late final _dcflight_set_childrenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Int32, ffi.Pointer<ffi.Int32>,
              ffi.Int32)>>('dcflight_set_children');
  late final _dcflight_set_children = _dcflight_set_childrenPtr
      .asFunction<bool Function(int, ffi.Pointer<ffi.Int32>, int)>();

  /// Add event listeners to a view
  /// viewId: Unique identifier for the view
  /// eventTypes: Comma-separated string of event types (e.g., "onPress,onChange")
  /// Returns true if listeners were added successfully, false otherwise
  bool dcflight_add_event_listeners(
    int viewId,
    ffi.Pointer<ffi.Char> eventTypes,
  ) {
    return _dcflight_add_event_listeners(
      viewId,
      eventTypes,
    );
  }

  late final _dcflight_add_event_listenersPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Pointer<ffi.Char>)>>(
      'dcflight_add_event_listeners');
  late final _dcflight_add_event_listeners = _dcflight_add_event_listenersPtr
      .asFunction<bool Function(int, ffi.Pointer<ffi.Char>)>();

  /// Remove event listeners from a view
  /// viewId: Unique identifier for the view
  /// eventTypes: Comma-separated string of event types to remove
  /// Returns true if listeners were removed successfully, false otherwise
  bool dcflight_remove_event_listeners(
    int viewId,
    ffi.Pointer<ffi.Char> eventTypes,
  ) {
    return _dcflight_remove_event_listeners(
      viewId,
      eventTypes,
    );
  }

  late final _dcflight_remove_event_listenersPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Pointer<ffi.Char>)>>(
      'dcflight_remove_event_listeners');
  late final _dcflight_remove_event_listeners =
      _dcflight_remove_event_listenersPtr
          .asFunction<bool Function(int, ffi.Pointer<ffi.Char>)>();

  /// Start a batch update (multiple operations that will be applied atomically)
  /// Returns true if batch update started successfully, false if one is already in progress
  bool dcflight_start_batch_update() {
    return _dcflight_start_batch_update();
  }

  late final _dcflight_start_batch_updatePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'dcflight_start_batch_update');
  late final _dcflight_start_batch_update =
      _dcflight_start_batch_updatePtr.asFunction<bool Function()>();

  /// Commit all queued batch update operations atomically
  /// operationsJson: JSON string containing array of operations
  /// Returns true if the batch was committed successfully, false otherwise
  bool dcflight_commit_batch_update(
    ffi.Pointer<ffi.Char> operationsJson,
  ) {
    return _dcflight_commit_batch_update(
      operationsJson,
    );
  }

  late final _dcflight_commit_batch_updatePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>)>>(
          'dcflight_commit_batch_update');
  late final _dcflight_commit_batch_update = _dcflight_commit_batch_updatePtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>)>();

  /// Cancel the pending batch updates
  /// Returns true if a batch was cancelled, false if no batch was in progress
  bool dcflight_cancel_batch_update() {
    return _dcflight_cancel_batch_update();
  }

  late final _dcflight_cancel_batch_updatePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'dcflight_cancel_batch_update');
  late final _dcflight_cancel_batch_update =
      _dcflight_cancel_batch_updatePtr.asFunction<bool Function()>();

  /// Call a method on a native component via the tunnel mechanism
  /// componentType: Type of component to call the method on
  /// method: Method name to call
  /// paramsJson: JSON string containing parameters for the method call
  /// resultJson: Output buffer for JSON result (must be pre-allocated, at least 4096 bytes)
  /// resultSize: Size of resultJson buffer
  /// Returns true if the method call succeeded, false otherwise
  bool dcflight_tunnel(
    ffi.Pointer<ffi.Char> componentType,
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<ffi.Char> paramsJson,
    ffi.Pointer<ffi.Char> resultJson,
    int resultSize,
  ) {
    return _dcflight_tunnel(
      componentType,
      method,
      paramsJson,
      resultJson,
      resultSize,
    );
  }

  late final _dcflight_tunnelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('dcflight_tunnel');
  late final _dcflight_tunnel = _dcflight_tunnelPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void dcflight_set_event_callback(
    DCFlightEventCallback callback,
  ) {
    return _dcflight_set_event_callback(
      callback,
    );
  }

  late final _dcflight_set_event_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DCFlightEventCallback)>>(
          'dcflight_set_event_callback');
  late final _dcflight_set_event_callback = _dcflight_set_event_callbackPtr
      .asFunction<void Function(DCFlightEventCallback)>();

  /// Get the current event callback (for use by Swift code)
  /// Returns the callback function pointer, or NULL if not set
  DCFlightEventCallback dcflight_get_event_callback() {
    return _dcflight_get_event_callback();
  }

  late final _dcflight_get_event_callbackPtr =
      _lookup<ffi.NativeFunction<DCFlightEventCallback Function()>>(
          'dcflight_get_event_callback');
  late final _dcflight_get_event_callback = _dcflight_get_event_callbackPtr
      .asFunction<DCFlightEventCallback Function()>();

  /// Send an event to Dart via the FFI callback (helper function for Swift)
  /// viewId: View ID that triggered the event
  /// eventType: Type of event (e.g., "onPress", "onChange")
  /// eventDataJson: JSON string containing event data
  void dcflight_send_event(
    int viewId,
    ffi.Pointer<ffi.Char> eventType,
    ffi.Pointer<ffi.Char> eventDataJson,
  ) {
    return _dcflight_send_event(
      viewId,
      eventType,
      eventDataJson,
    );
  }

  late final _dcflight_send_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int32, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('dcflight_send_event');
  late final _dcflight_send_event = _dcflight_send_eventPtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Get screen dimensions and metrics
  /// resultJson: Output buffer for JSON result (must be pre-allocated, at least 1024 bytes)
  /// resultSize: Size of resultJson buffer
  /// Returns true if successful, false otherwise
  bool dcflight_get_screen_dimensions(
    ffi.Pointer<ffi.Char> resultJson,
    int resultSize,
  ) {
    return _dcflight_get_screen_dimensions(
      resultJson,
      resultSize,
    );
  }
